修改后提交

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ $(this).siblings().removeClass("current");
 </div>
 
 
-<script type="text/javascript" src=" web/HZRecorder.js"></script>
+<script type="text/javascript" src="js/HZRecorder.js"></script>
 <script > 
 //视频播放/暂停
 var myVideo=document.getElementById("video1"); 
