二次提交项目

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 #nav {
     line-height:30px;
     background-color:#DDA0DD;
-    height:1500px;
+    height:1200px;
     width:280px;
     float:left;
     padding:5px;	      
@@ -27,7 +27,7 @@
 #section {
     //background-image:url(tp1.jpg);
     background-color:#FFB6C1;
-    width:980px;
+    width:950px;
     float:left;
     text-align:center;
     padding:30px;	 	 
@@ -121,6 +121,16 @@ text-decoration: none;
 
 <div id="nav">
 <div id="firstpaneDiv" class="menu_list">
+<h3 class="menu_head current">学习菜单</h3>
+<div style="display:none" class="menu_nva">
+<a href="https://www.w3school.com.cn/html/index.asp">HTML</a>
+<a href="https://www.w3school.com.cn/css/index.asp">CSS</a>
+<a href="https://www.w3school.com.cn/js/index.asp">Java Script</a>
+<a href="https://www.w3school.com.cn/jquery/index.asp">Spring 框架</a>
+<a href="https://www.runoob.com/sql/sql-tutorial.html">数据库</a>
+<a href="https://www.runoob.com/jquery/jquery-tutorial.html">Hibernate 框架</a>
+<a href="https://www.runoob.com/ajax/ajax-tutorial.html">Ajax 基础</a>
+</div>
 <h3 class="menu_head current">系统管理</h3>
 <div style="display:block" class="menu_nva">
 <a href="#">菜单管理</a>
@@ -130,16 +140,6 @@ text-decoration: none;
 <a href="#">编码管理</a>
 <a href="#">操作日志</a>
 <a href="#">流程管理</a>
-</div>
-<h3 class="menu_head">学习菜单</h3>
-<div style="display:none" class="menu_nva">
-<a href="#">HTML</a>
-<a href="#">CSS</a>
-<a href="#">Java Script</a>
-<a href="#">Spring 框架</a>
-<a href="#">数据库</a>
-<a href="#">Hibernate 框架</a>
-<a href="#">Ajax 基础</a>
 </div>
 </div>
  
@@ -165,8 +165,8 @@ $(this).siblings().removeClass("current");
 <div id="section" class="title" style="font-size:25px;">
    <ul>
         <li><a href="#"><b>首页</b></a></li>
-        <li><a href="#"><b>资料</b></a></li>
-        <li><a href="#"><b>测试</b></a></li>
+        <li><a href="https://www.runoob.com/python3/python3-tutorial.html"><b>资料</b></a></li>
+        <li><a href="http://www.kaoshiyun.com.cn/"><b>测试</b></a></li>
         <li class="move"> </li>
     </ul>
 <br>
