--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ text-decoration: none;
 <div id="nav">
 <div id="firstpaneDiv" class="menu_list">
 <h3 class="menu_head current">学习菜单</h3>
-<div style="display:none" class="menu_nva">
+<div style="display:block" class="menu_nva">
 <a href="https://www.w3school.com.cn/html/index.asp">HTML</a>
 <a href="https://www.w3school.com.cn/css/index.asp">CSS</a>
 <a href="https://www.w3school.com.cn/js/index.asp">Java Script</a>
