--- a/video recoder.html
+++ b/video recoder.html
@@ -5,6 +5,8 @@
 
 <head>
     
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta charset="utf-8" />
 <title>video recoder</title>
   
 <script src="fileSaver.js">
