--- a/video recoder.html
+++ b/video recoder.html
@@ -5,13 +5,18 @@
 
 <head>
     
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta charset="utf-8" />
 <title>video recoder</title>
   
 <script src="fileSaver.js">
 </script>
     
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+ 
+<meta charset="utf-8">
+  
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
 </head>
 
