第七次提交

--- a/wenben.html
+++ b/wenben.html
@@ -6,13 +6,13 @@
 </br>
 </br>
 <div  class="menu_nva" align="center">
-<p><h1>文本问答</h1></p>
+<p><h1>Text question and answer</h1></p>
 <textarea rows="10" cols="50">
-请输入文本内容！
+Please enter text content!
 </textarea>
 
 <form action="form_action.asp" method="get">
-  <input type="submit" value="提交" />
+  <input type="submit" value="Submit" />
 </form>
 </div>
 </body>
