--- a/recor.html
+++ b/recor.html
@@ -6,20 +6,20 @@
 </br>
 </br>
    <div style="display:block " class="menu_nva" align="center"  >
-   <p><h1>录音问答</h1></p>
-  <input onclick="startRecording()" type="button" value="录音" />
-  <input onclick="stopRecording()" type="button" value="停止" />
-  <input onclick="playRecording()" type="button" value="播放" />
-  <input onclick="uploadAudio()" type="button" value="提交" />
+   <p><h1>The recording questions and answer</h1></p>
+  <input onclick="startRecording()" type="button" value="record" />
+  <input onclick="stopRecording()" type="button" value="stop" />
+  <input onclick="playRecording()" type="button" value="play" />
+  <input onclick="uploadAudio()" type="button" value="submit" />
   <br />
 </br>
   <audio id="recordingslist" width="980" height="820" controls="controls" autoplay="autoplay"></audio>  
  
   </br>
 <div style="color:#0000FF">
- <p><h3>温馨提示：当点击“播放”按钮时才会显示播放进度时间等信息。</h3></p>  
- <p><h3>温馨提示：当录音暂停播放时方可重新录音。</h3></p>    
- <p><h3>温馨提示：请及时下载，否则语音会被覆盖。</h3></p> 
+ <p><h3>Warm Tip: When you click the Play button, information such as the play progress time will be displayed.</h3></p>  
+ <p><h3>Warm Tip: Recordings can only be resumed when recording is suspended.</h3></p>    
+ <p><h3>Warm Tip: Please download in time, otherwise the voice will be overwritten.</h3></p> 
 </div>
 <script type="text/javascript" src="js/HZRecorder.js"></script>
 <script > 
@@ -65,7 +65,7 @@
                             alert("上传成功");
                             break;
                         case 'error':
-                            alert("上传失败");
+                            alert("fail to upload");
                             break;
                         case 'cancel':
                             alert("上传被取消");
